--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,14 +4,13 @@
   </div>
 </div>
 
-<div class="container container-value">
-  <div class="title-value">
+<div class="container mt-3">
+  <div class="title-value mt-0">
     <div class="col-xs-12 no-padding-left">
-      <br>
-      <div class="no-padding-left">
-        <h4 class="typed"></h4>
+      <div id="typed-strings">
+        <h4 class="typed mb-0"></h4>
       </div>
-      <h2 class="p-banner pt-3">Can I be Your Rubber Duck?</h2>
+       <h2 class="p-banner pt-3">Can I be Your Rubber Duck?</h2>
     </div>
   </div>
   <div class="row row-value justify-content-around no-padding-left">
