--- a/app/views/ducks/index.html.erb
+++ b/app/views/ducks/index.html.erb
@@ -16,10 +16,11 @@
             <h5 class="card-title"><strong><%= duck.name %></strong></h5>
             <p><%= cl_image_tag duck.photo.key, class:"card-text", height: 300, width: 250, crop: :fill %></p>
             <p class="card-text"><strong>Price per day:</strong> <%= duck.price %>€</p>
-            <a href="http://www.google.com" onclick="event.stopPropagation()" class="booking btn btn-primary w-40 align-self-center">Book A Duck</a>
+            <%= link_to "Book this Duck", new_duck_booking_path(duck), class: "booking btn btn-primary w-40 align-self-center" %>
           </div>
         </div>
       </div>
     <% end %>
   </div>
 </div>
+<%= javascript_pack_tag 'button_click' %>
