--- a/app/views/ducks/_show.html.erb
+++ b/app/views/ducks/_show.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="duckModal<%= duck.id %>" tabindex="-1" role="dialog" aria-labelledby="duckModalCenterTitle">
+<div class="modal" id="duckModal<%= duck.id %>" tabindex="-1" role="dialog" aria-labelledby="duckModalCenterTitle">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
